--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,10 @@ li {
   display: flex;
   flex-wrap: wrap;
   align-items: start;
-  justify-content: start;
+  justify-content: center;
   border: 2px solid black;
-  gap: 10px;
+  gap: 15px;
+  padding: 50px;
 }
 
 .pocemon-item {
@@ -35,6 +36,6 @@ li {
   border: 1px solid grey;
   border-radius: 8px;
   font-size: 24px;
-  width: 250px;
+  width: 180px;
   height: 200px;
 }
