--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,24 @@ li {
   width: 180px;
   height: 200px;
 }
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1200;
+}
+
+.Modal {
+  max-width: calc(100vw - 48px);
+  max-height: calc(100vh - 24px);
+}
+.details {
+  color: #fff;
+}
