--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,36 @@ li {
 }
 
 .Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70vw;
+  height: 70vh;
+  border: 1px solid black;
+  padding: 50px;
+  background-color: aquamarine;
+  border-radius: 10px;
 }
 .details {
-  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: black;
+}
+.button {
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: yellow;
+  border: 1px solid;
+  border-color: blueviolet;
+  background-color: red;
+  border-radius: 50px;
+  margin: 20px;
+  width: 30px;
+  height: 30px;
+}
+.span1 {
+  padding-bottom: 20px;
+  padding-top: 30px;
 }
