--- a/src/index.css
+++ b/src/index.css
@@ -40,30 +40,6 @@ li {
   height: 200px;
 }
 
-.Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
-}
-
-.Modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 70vw;
-  height: 70vh;
-  border: 1px solid black;
-  padding: 50px;
-  background-color: aquamarine;
-  border-radius: 10px;
-}
 .details {
   display: flex;
   justify-content: center;
@@ -86,4 +62,10 @@ li {
 .span1 {
   padding-bottom: 20px;
   padding-top: 30px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
