add favorit cards

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ li {
 
 .pocemon-item {
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
