--- a/src/components/Heroes/HeroList/HeroList.module.css
+++ b/src/components/Heroes/HeroList/HeroList.module.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   gap: 15px;
   padding: 50px;
 }
