--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ li {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   gap: 15px;
   padding: 50px;
 }
